# ORBIT

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: ai_usage.py  audit.py  auth.py  capabilities.py  dashboard.py  devices.py  hermes.py  rooms.py  scenes.py  system.py  weather.py  ws.py
backend/app/auth/: passwords.py  rate_limit.py  tokens.py
backend/app/domain/: capability_values.py  events.py  principal.py
backend/app/integrations/: mosquitto_dynsec.py  weather.py
backend/app/mqtt/: client.py
backend/app/repositories/: ai_usage.py  audit.py  db.py  devices.py  hermes.py  models.py  readings.py  rooms.py  scenes.py  users.py
backend/app/services/: audit.py  auth_service.py  capability_service.py  device_service.py  room_service.py  scene_service.py  system_service.py
backend/app/utils/: logging.py  text.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_foundational_schema.py  0002_dashboard_widgets.py
backend/scripts/: issue_service_token.py  seed.py
docs/: api-contract.yaml
docs/decisions/: 0001-firmware-mqtt-library.md
docs/specs/: api-contract.yaml  audit-events.md  capability-catalog.md  command-palette.md  hermes-chat-api.yaml  hermes-tool-manifest.json  mqtt-topics.md  n8n-contract.md  schema.sql  theme-tokens.md  widget-contract.md  (+1 more)
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
hermes/: README.md
(+51 files in other folders)
